--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,4 +18,4 @@ jobs:
                 chmod +x ./InstallChrome.sh
                             ./InstallChrome.sh 
       - name: Build with Maven
-        run: mvn clean package
+        run: mvn clean test
