--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,5 +17,5 @@ jobs:
         run:   |
                 chmod +x ./InstallChrome.sh
                             ./InstallChrome.sh 
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
+      - name: Run tests with Maven
+        run: mvn -B test --file pom.xml
