--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,5 +17,5 @@ jobs:
         run:   |
                 chmod +x ./InstallChrome.sh
                             ./InstallChrome.sh 
-      - name: Build with Maven
+      - name: Build and run tests with Maven
         run: mvn -B package --file pom.xml
