--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,9 +1,13 @@
 name: Java CI with Maven
 on:
   push:
-    branches: [ master ]
+    branches: [ master, dev ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, dev ]
+  schedule:
+  - cron: "0 */12 * * *"
+  
+
 jobs:
   build:
     runs-on: ubuntu-latest
