--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,9 +1,13 @@
 name: Java CI with Maven
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - development
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+      - development
   schedule:
   - cron: "0 */12 * * *"
   
