--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,12 +1,9 @@
 name: Java CI with Maven
 on:
   push:
-    branches: [ master ]
+    branches: [ development ]
   pull_request:
-    branches: [ master ]
-  schedule:
-  - cron: "0 */12 * * *"
-  
+    branches: [ development ]
 
 jobs:
   build:
