--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Build
         run: mvn -B clean package -DskipTests
       - name: Run tests
-        run: mvn -B clean verify
+        run: mvn -B clean verify -Pheadless-mode
