--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,13 @@
-name: Java CI with Maven - Dev branch
+name: Java CI with Maven - Master branch
 on:
   push:
     branches:
-      - development
+      - master
   pull_request:
     branches:
-      - development
+      - master
+  schedule:
+  - cron: "0 */12 * * *"
 
 jobs:
   build:
